--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,10 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
+
+        <item
+            android:id="@+id/nav_vehicule"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_vehicule" />
     </group>
 </menu>
