--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,5 +28,10 @@
             app:popUpToInclusive="true" />
     </fragment>
     <action android:id="@+id/action_global_nav_quote_edit" app:destination="@id/nav_quote_edit" />
+    <fragment
+        android:id="@+id/nav_vehicule"
+        android:name="diiage.potherat.demo.demoapp3.ui.vehicule.vehicule"
+        android:label="vehicule_fragment"
+        tools:layout="@layout/vehicule_fragment" />
 
 </navigation>
